# viam-lerobot-service

./: .gitignore  README.md  build.sh  meta.json  requirements.txt  run.sh  teleoperate_script.py
lerobot_camera_viam_camera/: pyproject.toml
lerobot_camera_viam_camera/lerobot_camera_viam_camera/: __init__.py  config_viam_camera.py  viam_camera.py
lerobot_robot_viam_robot/: __init__.py  config_viam_robot.py  pyproject.toml  viam_robot.py
lerobot_robot_viam_robot/lerobot_robot_viam_robot/: __init__.py  config_viam_robot.py  viam_robot.py
lerobot_teleoperator_viam_teleoperator/: __init__.py  config_viam_teleoperator.py  pyproject.toml  viam_teleoperator.py
lerobot_teleoperator_viam_teleoperator/lerobot_teleoperator_viam_teleoperator/: __init__.py  config_viam_teleoperator.py  viam_teleoperator.py
src/: main.py  policy.py  record.py  replay.py  teleoperate.py
src/models/: viam_lerobot_service_module.py
