[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_camera_viam_camera"
version = "0.1.0"
description = "Viam camera wrapper implementation for LeRobot"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "viam-sdk",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_camera_viam_camera*"]
exclude = ["*.egg-info"]
